src/objects/Property__c.object
<CustomObject>
    <description>AstrumPM/AstrumCRM - Each account can have one or more properties.  A property is defined by its street address.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Property_Owner__r.AccountNumber</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Community_Program__c</fullName>
        <label>Affiliate Community Program</label>
        <picklist>
            <picklistValues>
                <fullName>Mass Energy Solar Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUNY/Pepsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Pacific Gas &amp; Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Long Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D SCE - 10B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temple Sinai Solar Co-Op DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temple Sinai Solar Co-Op MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temple Sinai Solar Co-Op VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize VCCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloucester Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE Houston Employee Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize SecondChance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Sagewell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE Delmarva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D NSTAR MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D National Grid MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D JCP&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D PSEG NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Atlantic City Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D United Illuminating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Connecticut L&amp;P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwalk CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D ConEd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D PEPCO MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D BG&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Delmarva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrofit Baltimore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Astrum_Office_New__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Astrum Office Lookup</label>
        <referenceTo>Office_Location__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Astrum_Office__c</fullName>
        <label>Astrum Office</label>
        <picklist>
            <picklistValues>
                <fullName>Columbia, MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corona, CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cromwell, CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno, CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henrietta, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hopkinton, MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Island, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middletown, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norristown, PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennsauken, NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego, CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simi Valley, CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syracuse, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taunton, MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westford, MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youngstown, OH</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Astrum_Sales_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Astrum Sales Region</label>
        <referenceTo>Astrum_Sales_Region__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Bodies__c</fullName>
        <label>Required Authorizations</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Historical Area</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CPF_Rate_Schedule_Id__c</fullName>
        <label>CPF Rate Schedule Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmed_Location__c</fullName>
        <label>Confirmed Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>DC_to_AC_Derate__c</fullName>
        <defaultValue>0.925</defaultValue>
        <description>Derate accounting for DC to AC conversion</description>
        <inlineHelpText>Derate accounting for DC to AC conversion</inlineHelpText>
        <label>DC-to-AC Derate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HOA_Contact_Email__c</fullName>
        <label>HOA Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HOA_Contact_Name__c</fullName>
        <label>HOA Contact Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Contact_Phone__c</fullName>
        <label>HOA Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hours_From_Nearest_Office__c</fullName>
        <defaultValue>1</defaultValue>
        <description>How Far is This Property From the Nearest Astrum Solar Office?</description>
        <inlineHelpText>How Far is This Property From the Nearest Astrum Solar Office?</inlineHelpText>
        <label>Hours From Nearest Office</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Site_Quality__c</fullName>
        <description>Max Site Quality</description>
        <label>Max Site Quality (kWh/y/kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles_To_Office__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Miles from the property to assigned Astrum Office.</description>
        <inlineHelpText>Miles from the property to assigned Astrum Office.</inlineHelpText>
        <label>Miles From Nearest Office</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optimal_Site_Quality_kWh_y_kW__c</fullName>
        <label>Optimal Site Quality (kWh/y/kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permit_Jurisdiction__c</fullName>
        <description>Jurisdiction (county, township, etc) for property permitting</description>
        <label>Permit Jurisdiction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_2__c</fullName>
        <label>Property Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Country__c</fullName>
        <description>Property Country</description>
        <inlineHelpText>Property Country</inlineHelpText>
        <label>Property Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <label>Property County</label>
        <picklist>
            <controllingField>Property_State__c</controllingField>
            <picklistValues>
                <fullName>Accomack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alameda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexandria City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alleghany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegheny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amelia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amherst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Arundel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apache</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appomattox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arenac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arlington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armstrong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashtabula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auglaize</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that represents the Owner of this Building.  This may be a Family or a Business.</description>
        <label>Property Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <picklist>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_ZIP__c</fullName>
        <label>Property ZIP</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Latitude__c</fullName>
        <description>QAS Auto-Populated Latitude</description>
        <inlineHelpText>QAS Auto-Populated Latitude</inlineHelpText>
        <label>QAS Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Longitude__c</fullName>
        <description>QAS Auto-Populated Longitude</description>
        <inlineHelpText>QAS Auto-Populated Longitude</inlineHelpText>
        <label>QAS Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Property_County__c</fullName>
        <description>Auto-Populated County From QAS</description>
        <inlineHelpText>Auto-Populated County From QAS</inlineHelpText>
        <label>QAS Property County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified_Utililty_Service_Count__c</fullName>
        <label>Qualified Utililty Service Count</label>
        <summaryFilterItems>
            <field>Utility_Service__c.Service_Account_Number__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Utility_Service__c.Has_Utility_Company__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Utility_Service__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeDeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>CA Region</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>CT Region</fullName>
                <color>#33FFFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>MA Region</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>MD Region</fullName>
                <color>#6600CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>NJ Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Region</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>OH Region</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>PA Region</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>WNY Region</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sighten_Site_uuid__c</fullName>
        <description>Contains the uuid for the property in the Sighten system</description>
        <externalId>true</externalId>
        <label>Sighten Site uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snow_De_Rate_kWh_y_kW__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Snow De-Rate</description>
        <label>Snow De-Rate (kWh/y/kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Count__c</fullName>
        <label>Survey Count</label>
        <summaryFilterItems>
            <field>Survey__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Field Survey, Aerial Photo Survey</value>
        </summaryFilterItems>
        <summaryForeignKey>Survey__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Used by the custom Astrum Event scheduling app, field exists in Property and Lead.</description>
        <formula>if(
   ispickval(Property_State__c, &apos;CA&apos;) || 
   ispickval(Property_State__c, &apos;NV&apos;) ||
   ispickval(Property_State__c, &apos;AZ&apos;)
   ,&quot;America/Los_Angeles&quot;,&quot;America/New_York&quot;)

/*
TimeZoneSidKey = Match the time zone to what Salesforce stores in the database.

Arizona is actually on Mountain Standard Time and does not observe daylight time. But since the Astrum employee&apos;s salesforce account will be set to Pacific time, it&apos;s best to match the salesperson&apos;s time so that it shows on their calendar correctly.
*/</formula>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED AS OF 11/25/14</description>
        <label>Utility Company Master</label>
        <referenceTo>Utility_Company_master__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Rate_Code__c</fullName>
        <description>DEPRECATED AS OF 11/25/14</description>
        <formula>Utility_Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Company Rate Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED AS OF 11/25/14</description>
        <label>Utility Rate Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Service_Territory__c</fullName>
        <description>DEPRECATED AS OF 11/25/14</description>
        <formula>Utility_Company__r.Utility_Service_Territory__c</formula>
        <label>Utility Service Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationStatus__c</fullName>
        <label>QAS Validation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationTimestamp__c</fullName>
        <label>QAS Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TX</fullName>
        <columns>NAME</columns>
        <columns>Property_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_State__c</field>
            <operation>equals</operation>
            <value>TX</value>
        </filters>
        <label>Texas</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Property Address 1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <recordTypes>
        <fullName>Commercial</fullName>
        <active>true</active>
        <label>Commercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Profit</fullName>
        <active>true</active>
        <label>Non-Profit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Residential</fullName>
        <active>true</active>
        <label>Residential</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Property_Must_Have_County</fullName>
        <active>true</active>
        <description>Property Must Have County</description>
        <errorConditionFormula>ISBLANK(TEXT( Property_County__c ))</errorConditionFormula>
        <errorDisplayField>Property_County__c</errorDisplayField>
        <errorMessage>Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Property_Must_Have_State</fullName>
        <active>true</active>
        <description>Property Must Have A State</description>
        <errorConditionFormula>ISBLANK( TEXT(Property_State__c ))</errorConditionFormula>
        <errorDisplayField>Property_State__c</errorDisplayField>
        <errorMessage>Required</errorMessage>
    </validationRules>
</CustomObject>